[gd_scene load_steps=7 format=2]

[ext_resource path="res://game_screen/enemy.gd" type="Script" id=1]
[ext_resource path="res://game_screen/blowfish_frames.tres" type="SpriteFrames" id=2]
[ext_resource path="res://assets/art/particles.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.490521, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.207843 )

[node name="Enemy" type="Node2D"]
script = ExtResource( 1 )

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
frame = 20
playing = true

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 2.0
one_shot = true
explosiveness = 0.8
texture = SubResource( 2 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, -40 )
initial_velocity = 20.0
color_ramp = SubResource( 3 )
anim_offset_random = 1.0

[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
